2009-01-28  Petr Mladek  <pmladek@suse.cz>
* Version 3.0.1.1	(3.0.1-rc2 = final) (SLED10-SP2 maintenanance update)

--- a/NEWS
+++ b/NEWS
@@ -1,19 +1,22 @@
 ooo-build-3.0.1.1:
 
     + bug fixes:
-	+ do not show the Err:529 internal error number (bnc#440808) [Kohei]
 	+ accelerators for the en-US locale (bnc#463733, i#97088) [Kendy]
 	+ recognize a directory as a folder with neon (i#98288) [Caolan]
-	+ shrinked strings in some dialogs (i##98164) [Andras]
-	+ fix java-set-classpath script (bnc#465250) [Petr]
+	+ shrunken strings in some dialogs (i##98164) [Andras]
+	+ indent flat odt files (lp#226075, n#437561) [Chris]
 	+ file name in the mail subject (bnc#459176) [Tor]
-	+ layout dialogs localization (bnc#466065) [Jan]
-	+ SXC import crasher (bnc#467536) [Petr]
+	+ java-set-classpath script (bnc#465250) [Petr]
+	+ SXC import crasher (bnc#467536) [Jon]
     + l10n:
+	+ layout dialogs localization (bnc#466065) [Jan]
 	+ some Hungarian localization fixes [Andras]
     + build bits:
-	+ extras and extensions packaging enhancemetns [KAMI, Tor]
+	+ extras and extensions packaging enhancements [KAMI, Tor]
 	+ printf arguments cleanup [Rafael]
+    + UbuntuOnly:
+	+ do not show the Err:529 internal error number (bnc#440808) [Kohei]
+	+ menu entries update (lp#41694) [Chris]
     + updated OxygenOffice bits [KAMI]
     + Experimental:
 	+ non-cached cells treating (bnc#355685) [Kohei]
