--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+ooo-build-3.0.1.2:
+
+    + build bits:
+	+ allow to redefine existing diff in hotfixes [Petr]
+    + Experimental:
+	+ better fix of the non-cached cells treating (bnc#355685) [Kohei]
+
 ooo-build-3.0.1.1:
 
     + bug fixes:
