2009-02-05  Petr Mladek  <pmladek@suse.cz>
* Version 3.0.0.14	(SLED11-rc4)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+ooo-build-3.0.0.14:
+
+    + bug fixes:
+	+ make atk/a11y work again (i#98533, bnc#457611) [Michael]
+	+ define OOXML and FlatXML MIME types (bnc#439804) [Petr]
+	+ fields export into MS DOC (bnc#472351)
+    + VBA bits:
+	+ runtime error with ColorIndex function (bnc#459479) [Fong]
+    + build bits:
+	+ apply correctly some patches (bnc#443698) [Petr]
+
 ooo-build-3.0.0.13:
 
     + localization:
