Update localized strings from https://forgesvn1.
* po/ooo-build-*.po, po/ooo-build-*.sdf: update localized strings
from https://forgesvn1.novell.com/svn/suse-i18n/branches/SLE11/lcn

--- a/po/ooo-build-hu.po
+++ b/po/ooo-build-hu.po
@@ -1,19 +1,22 @@
+# translation of ooo-build.hu.po to
+# Kalman Kemenczy <kkemenczy@novell.com>, 2008.
 #. extracted from (input file name not known)
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: ooo-build.hu\n"
 "Report-Msgid-Bugs-To: http://qa.openoffice.org/issues/enter_bug.cgi?"
 "subcomponent=ui&comment=&short_desc=Localization%20issue%20in%20file%3A%20"
 "(input%20file%20name%20not%20known)&component=l10n&form_name=enter_issue\n"
 "POT-Creation-Date: 2009-01-12 14:20+0200\n"
-"PO-Revision-Date: 2008-09-28 21:07+0100\n"
-"Last-Translator: Andras Timar <timar@fsf.hu>\n"
-"Language-Team: Hungarian <hu@li.org>\n"
+"PO-Revision-Date: 2008-10-20 05:25+0200\n"
+"Last-Translator: Kalman Kemenczy <kkemenczy@novell.com>\n"
+"Language-Team:  <hu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.1.1\n"
+"X-Generator: KBabel 1.11.4\n"
 "X-Accelerator-Marker: ~\n"
+"Plural-Forms: Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: basctl/source/basicide/basidesh.src#RID_STR_CLASS_MODULES.string.text
 msgid "Class Modules"
@@ -370,9 +373,9 @@ msgid ""
 "password that cannot be exported.  Please re-type your password to be able "
 "to export your document."
 msgstr ""
-"Az exportálni kívánt dokumentum egy vagy több jelszóval védett elemet "
-"tartalmaz, amelyek jelszavát nem lehet exportálni. Írja be újra a jelszót, "
-"hogy lehetségessé váljon a dokumentum exportálása."
+"Az exportálni kívánt dokumentum egy vagy több jelszóval védett elemet tartalmaz, "
+"amelyek jelszavát nem lehet exportálni. Írja be újra a jelszót, hogy lehetségessé "
+"váljon a dokumentum exportálása."
 
 #: sc/source/ui/miscdlgs/retypepassdlg.src#RID_SCDLG_RETYPEPASS.FT_DOCSTATUS.fixedtext.text
 msgctxt ""
@@ -805,7 +808,7 @@ msgstr "Hangfájl"
 
 #: svtools/source/misc1/mediatyp.src#STR_SVT_MIMETYPE_VIDEO_THEORA.string.text
 msgid "Video file"
-msgstr "Videofájl"
+msgstr "Videófájl"
 
 #: svx/source/dialog/autocdlg.src#COMMON_CLB_ENTRIES.ST_CORRECT_ACCIDENTAL_CAPS_LOCK.string.text
 msgid "Correct accidental use of cAPS LOCK key"
@@ -854,12 +857,12 @@ msgstr "Az ODMA DMS párbeszédablakok megjelenítése"
 #: svx/source/dialog/ruler.src#RID_SVXMN_RULER.ID_CHAR.menuitem.text
 msgctxt "svx/source/dialog/ruler.src#RID_SVXMN_RULER.ID_CHAR.menuitem.text"
 msgid "Char"
-msgstr "Karakter"
+msgstr "karakter"
 
 #: svx/source/dialog/ruler.src#RID_SVXMN_RULER.ID_LINE.menuitem.text
 msgctxt "svx/source/dialog/ruler.src#RID_SVXMN_RULER.ID_LINE.menuitem.text"
 msgid "Line"
-msgstr "Sor"
+msgstr "sor"
 
 #: svx/source/dialog/textanim.src#RID_SVXPAGE_TEXTANIMATION.MTR_FLD_AMOUNT.metricfield.text
 msgctxt ""
@@ -1288,13 +1291,13 @@ msgstr "Időjárás"
 msgctxt ""
 "svx/source/options/optgenrl.src#RID_SVXSTR_FIELDUNIT_TABLE.10.itemlist.text"
 msgid "Char"
-msgstr "Karakter"
+msgstr "karakter"
 
 #: svx/source/options/optgenrl.src#RID_SVXSTR_FIELDUNIT_TABLE.11.itemlist.text
 msgctxt ""
 "svx/source/options/optgenrl.src#RID_SVXSTR_FIELDUNIT_TABLE.11.itemlist.text"
 msgid "Line"
-msgstr "Sor"
+msgstr "sor"
 
 #: svx/source/tbxctrls/tbcontrl.src#RID_SVX_ZOOM_OPTIMAL.string.text
 msgid "~Optimal"
@@ -1315,12 +1318,12 @@ msgstr "Karakter egység engedélyezése"
 #: sw/source/ui/config/optload.src#STR_ARR_METRIC.10.itemlist.text
 msgctxt "sw/source/ui/config/optload.src#STR_ARR_METRIC.10.itemlist.text"
 msgid "Char"
-msgstr "Karakter"
+msgstr "karakter"
 
 #: sw/source/ui/config/optload.src#STR_ARR_METRIC.11.itemlist.text
 msgctxt "sw/source/ui/config/optload.src#STR_ARR_METRIC.11.itemlist.text"
 msgid "Line"
-msgstr "Sor"
+msgstr "sor"
 
 #: sw/source/ui/inc/swmn_tmpl.hrc#MN_REDLINE.FN_REDLINE_ACCEPT_CURRENT.menuitem.text
 msgid "~Accept..."
@@ -1462,12 +1465,3 @@ msgstr "sor"
 #: vcl/source/src/units.src#SV_FUNIT_STRINGS.20.itemlist.text
 msgid "%"
 msgstr "%"
-
-#~ msgid ""
-#~ "The document you are about to export has one or more protected items with "
-#~ "an incompatible password hash.  Please re-type your password to re-"
-#~ "generate password hash that is compatible with the exported format."
-#~ msgstr ""
-#~ "Az exportálni kívánt dokumentum egy vagy több védett elemet tartalmaz, "
-#~ "amelyek jelszókivonata nem kompatibilis. Írja be újra a jelszót, hogy "
-#~ "újra létrejöjjön az exportált formátummal kompatibilis jelszókivonat."
