2009-02-06  Petr Mladek  <pmladek@suse.cz>
* Version 3.0.0.15	(SLED11-rc4)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+ooo-build-3.0.0.15:
+
+    + localization:
+	+ update ooo-build localization from openSUSE community [Petr]
+
 ooo-build-3.0.0.14:
 
     + bug fixes:
