2009-02-19  Petr Mladek  <pmladek@suse.cz>
* Version 3.0.0.16	(SLED11-rc5)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+ooo-build-3.0.0.16:
+
+    + bug fixes:
+	+ do not lost charts (bnc#476293) [Kohei]
+    + use gnome-vfs2 instead of GIO for SUSE (bnc#443467) [Petr]
+
 ooo-build-3.0.0.15:
 
     + localization:
