2009-02-20  Petr Mladek  <pmladek@suse.cz>
* Version 3.0.0.16.1	(SLED11-rc5)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+ooo-build-3.0.0.16.1:
+
+    + bug fixes:
+	+ find & replace dialog crasher (bnc#477854) [Kohei]
+
 ooo-build-3.0.0.16:
 
     + bug fixes:
