2009-03-06  Petr Mladek  <pmladek@suse.cz>
* Version 3.0.1.3	(3.0.1 maintenance update)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,28 @@
+ooo-build-3.0.1.3:
+
+    + bug fixes:
+	+ do not lost charts (bnc#476293) [Kohei]
+	+ broken stacked-area chart (bnc#472264) [Kohei]
+	+ incorrectly used semicolon in formulas (bnc#480195) [Kohei]
+	+ infinite loop when pasting over cells in Calc (bnc#478309) [Patrick]
+	+ Named ranges with Excel A1 or R1C1 syntax (bnc#481200) [Kohei]
+	+ missing values in hidden cells (i#99400) [Kohei]
+	+ copy sheet crasher (bnc#478187) [Noel]
+	+ find & replace dialog crasher (bnc#477854) [Kohei]
+	+ make atk/a11y work again (i#98533, bnc#457611) [Michael]
+	+ installing font with running OOo crasher (i#94069) [Caolan, Chris]
+	+ save recent document history more often (i#51154, deb#505879) [Chris]
+    + VBA bits:
+	+ IsError problems (bnc#469762) [Noel]
+    + build bits:
+	+ fix --with-srcdir to work [Fridrich]
+	+ helpcontent packaging [Petr]
+	+ build on MIPS [Rene]
+    + updated GoOo, Mandriva bits [Fridrich, Rafael]
+    + experimental:
+	+ multiple chart types in a single chart (i#95934, bnc#437322) [Kohei]
+	+ support KDE 4.1 [Bernhard]
+
 ooo-build-3.0.1.2:
 
     + build bits:
